# thinc-nnpa-ops

./: LICENSE  pyproject.toml  requirements.txt
src/thinc_nnpa_ops/: __init__.py  nnpa_ops.py
