[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "thinc_nnpa_ops"
version = "0.0.1"
authors = [
    { name="Tabari Alexander", email="tehbone@gmail.com" },
]
description = "Allow Thinc pipelines to utilize the Telum AI accelerator."
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    thinc,
    thinc_bigendian_ops,
]

[project.urls]
Homepage = "https://github.com/tehbone/thinc_nnpa_ops"
Issues = "https://github.com/tehbone/thinc_nnpa_ops/issues"

[project.entry-points.thinc_ops]
NnpaOps = thinc_nnpa_ops:NnpaOps
